--- a/pokemon-info/package.json
+++ b/pokemon-info/package.json
@@ -11,9 +11,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "heroku": "^7.24.4",
+    "axios": "^0.19.0",
     "express": "*",
+    "heroku": "^7.24.4",
     "vue": "^2.5.11"
   },
   "browserslist": [
@@ -27,11 +27,12 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
+    "css-loader": "^3.0.0",
     "express": "^4.17.1",
     "file-loader": "^1.1.4",
     "serve-static": "^1.14.1",
     "vue-loader": "^13.0.5",
+    "vue-router": "^3.0.6",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
